--- a/continuosPPO.ipynb
+++ b/continuosPPO.ipynb
@@ -711,7 +711,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dirtyrl",
+   "display_name": "dirtyRL (3.13.5)",
    "language": "python",
    "name": "python3"
   },
